Be more truthful in the README.

--- a/README
+++ b/README
@@ -2,8 +2,8 @@
 libds
 -----
 
-A datastructure and algorithm library that I wrote to do my Coursera
-homework and as a preparation for interviews.
+A datastructure and algorithm library that I am trying to write for my
+Coursera homework and as part of preparation for interviews.
 
 ------------
 How To Build
